--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
                 <i class="fas fa-scissors logo-icon"></i>
                 Perfect Fit
             </div>
+            <div class="burger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
             <ul class="nav-links">
                 <li><a href="./index.html" class="active">Home</a></li>
                 <li><a href="./services.html">Services</a></li>
