--- a/about.html
+++ b/about.html
@@ -14,9 +14,14 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
+            <a href="./index.html" class="logo">
                 <i class="fas fa-scissors logo-icon"></i>
                 Perfect Fit
+            </a>
+            <div class="burger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
             </div>
             <ul class="nav-links">
                 <li><a href="./index.html">Home</a></li>
