--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
+            <a href="./index.html" class="logo">
                 <i class="fas fa-scissors logo-icon"></i>
                 Perfect Fit
-            </div>
-            <div class="burger-menu">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-            </div>
+            </a>
+            <button class="mobile-menu-btn">
+                <i class="fas fa-bars"></i>
+            </button>
             <ul class="nav-links">
                 <li><a href="./index.html" class="active">Home</a></li>
                 <li><a href="./services.html">Services</a></li>
@@ -31,41 +29,84 @@
         </nav>
     </header>
 
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay">
+        <div class="mobile-menu-content">
+            <div class="mobile-nav-links">
+                <a href="./index.html" class="active">Home</a>
+                <a href="./services.html">Services</a>
+                <a href="./about.html">About</a>
+                <a href="./contact.html">Contact</a>
+            </div>
+        </div>
+    </div>
+
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1>Perfect Fit Alterations</h1>
-                <p>Your trusted source for professional clothing alterations.</p>
-                <a href="contact.html#quoteForm" class="cta-button">Get a Free Quote</a>
+                <h1>Welcome to Perfect Fit</h1>
+                <p>Where every stitch tells your story</p>
+                <a href="contact.html#quoteForm" class="cta-button">Book Your Consultation</a>
             </div>
         </section>
 
-        <!-- New Why Choose Us Section -->
+        <!-- Update the business intro section -->
+        <section class="business-intro">
+            <div class="intro-container">
+                <div class="intro-content">
+                    <div class="tailor-profile">
+                        <img src="https://images.pexels.com/photos/4622419/pexels-photo-4622419.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Professional Tailoring" class="tailor-image">
+                        <div class="tailor-info">
+                            <h2>Perfect Fit Alterations</h2>
+                            <h3>Your Trusted Tailoring Partner Since 2003</h3>
+                            <p>"At Perfect Fit, we believe that the right alterations can transform not just your clothes, but your confidence. For over 20 years, our dedicated team has been serving our community with precision, care, and attention to detail. We take pride in understanding each client's unique needs and ensuring every garment tells your story perfectly. From wedding dresses to everyday wear, we treat each piece with the same level of craftsmanship and dedication."</p>
+                            <div class="signature">Where Every Stitch Matters</div>
+                        </div>
+                    </div>
+                    <div class="intro-stats">
+                        <div class="stat-item">
+                            <span class="stat-number">20+</span>
+                            <span class="stat-label">Years of Craftsmanship</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">5k+</span>
+                            <span class="stat-label">Happy Stories</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-number">100%</span>
+                            <span class="stat-label">Dedication to You</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Update Why Choose Us section -->
         <section class="why-us">
             <div class="section-header">
-                <h2>Why Choose Us</h2>
-                <p>Experience the difference with our expert tailoring services</p>
+                <h2>Our Promise to You</h2>
+                <p>More than alterations, we create relationships</p>
             </div>
             <div class="why-us-grid">
                 <div class="why-us-card">
-                    <i class="fas fa-ruler-combined"></i>
-                    <h3>Expert Measurements</h3>
-                    <p>Precise measurements and attention to detail ensure the perfect fit every time.</p>
-                </div>
-                <div class="why-us-card">
-                    <i class="fas fa-gem"></i>
-                    <h3>Premium Quality</h3>
-                    <p>Using only the finest materials and techniques for lasting results.</p>
-                </div>
-                <div class="why-us-card">
-                    <i class="fas fa-clock"></i>
-                    <h3>Quick Turnaround</h3>
-                    <p>Fast and efficient service without compromising on quality.</p>
-                </div>
-                <div class="why-us-card">
                     <i class="fas fa-heart"></i>
-                    <h3>Customer Satisfaction</h3>
-                    <p>Your satisfaction is our top priority, guaranteed.</p>
+                    <h3>Personal Care</h3>
+                    <p>Every client receives my undivided attention. I take time to understand your needs and preferences.</p>
+                </div>
+                <div class="why-us-card">
+                    <i class="fas fa-comments"></i>
+                    <h3>Open Communication</h3>
+                    <p>Regular updates and consultations ensure your vision becomes reality.</p>
+                </div>
+                <div class="why-us-card">
+                    <i class="fas fa-hand-holding-heart"></i>
+                    <h3>Lasting Relationships</h3>
+                    <p>Many of our clients have been with us for years, trusting us with their most precious garments.</p>
+                </div>
+                <div class="why-us-card">
+                    <i class="fas fa-star"></i>
+                    <h3>Guaranteed Satisfaction</h3>
+                    <p>Your happiness is our priority. We work until every detail is perfect.</p>
                 </div>
             </div>
         </section>
