--- a/index.html
+++ b/index.html
@@ -96,38 +96,8 @@
             </div>
         </section>
 
-        <!-- Process Section -->
-        <section class="process">
-            <div class="section-header">
-                <h2>Our Process</h2>
-                <p>Simple steps to your perfect fit</p>
-            </div>
-            <div class="process-steps">
-                <div class="step">
-                    <div class="step-number">1</div>
-                    <h3>Consultation</h3>
-                    <p>Initial meeting to discuss your needs and take measurements</p>
-                </div>
-                <div class="step">
-                    <div class="step-number">2</div>
-                    <h3>Assessment</h3>
-                    <p>Detailed evaluation of alterations needed</p>
-                </div>
-                <div class="step">
-                    <div class="step-number">3</div>
-                    <h3>Alteration</h3>
-                    <p>Expert tailoring with attention to detail</p>
-                </div>
-                <div class="step">
-                    <div class="step-number">4</div>
-                    <h3>Final Fitting</h3>
-                    <p>Ensuring everything fits perfectly</p>
-                </div>
-            </div>
-        </section>
-
         <!-- Features Section (existing) -->
-        <section class="features">
+        <!-- <section class="features">
             <div class="feature">
                 <i class="fas fa-medal feature-icon"></i>
                 <h2>Expert Craftsmanship</h2>
@@ -143,7 +113,7 @@
                 <h2>Satisfaction Guaranteed</h2>
                 <p>We ensure your complete satisfaction with every service</p>
             </div>
-        </section>
+        </section> -->
 
         <!-- Testimonials Section -->
         <section class="testimonials">
