--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
                 <i class="fas fa-scissors logo-icon"></i>
                 Perfect Fit
             </a>
-            <ul class="nav-links">
+            <div class="hamburger" id="hamburger">
+                <i class="fas fa-bars"></i>
+            </div>
+            <ul class="nav-links" id="nav-links">
                 <li><a href="./index.html" class="active">Home</a></li>
                 <li><a href="./services.html">Services</a></li>
                 <li><a href="./about.html">About</a></li>
@@ -182,5 +185,13 @@
     </footer>
 
     <script src="./js/main.js"></script>
+    <script>
+        const hamburger = document.getElementById('hamburger');
+        const navLinks = document.getElementById('nav-links');
+
+        hamburger.addEventListener('click', () => {
+            navLinks.classList.toggle('active');
+        });
+    </script>
 </body>
 </html> 
