--- a/about.html
+++ b/about.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Perfect Fit Alterations</title>
+    <meta name="description" content="Learn about Perfect Fit Alterations - 20+ years of expert tailoring experience in New York. Meet our master tailors and discover our commitment to quality.">
+    <meta name="keywords" content="tailor shop, alterations business, expert tailors, clothing alterations, New York tailoring, tailoring experience">
+    <meta name="author" content="Perfect Fit Alterations">
+    <meta name="robots" content="index, follow">
+    <title>About Our Tailoring Shop | Perfect Fit Alterations New York</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="canonical" href="https://www.perfectfitalterations.com/about.html">
 </head>
 <body>
     <header>
@@ -36,7 +41,7 @@
                 <h1>About Us</h1>
                 <div class="about-content">
                     <div class="about-image">
-                        <img src="https://images.unsplash.com/photo-1593030761757-71fae45fa0e7?w=800" alt="Our Master Tailor">
+                        <img src="https://images.unsplash.com/photo-1593030761757-71fae45fa0e7?w=800" alt="Our master tailor with over 20 years of experience at Perfect Fit Alterations" loading="lazy">
                     </div>
                     <div class="about-text">
                         <h2>Expert Tailoring Services</h2>
