--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Perfect Fit Alterations</title>
+    <meta name="description" content="Contact Perfect Fit Alterations in New York. Book appointments for tailoring services, alterations, and clothing repairs. Visit our Fashion District location.">
+    <meta name="keywords" content="tailor contact, book alterations, tailoring appointment, clothing repair quote, New York tailor location">
+    <meta name="author" content="Perfect Fit Alterations">
+    <meta name="robots" content="index, follow">
+    <title>Contact Us | Perfect Fit Alterations New York</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/contact.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <!-- Add canonical URL -->
+    <link rel="canonical" href="https://www.perfectfitalterations.com/contact.html">
 </head>
 <body>
     <header>
