--- a/index.html
+++ b/index.html
@@ -3,12 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfect Fit Alterations</title>
+    <meta name="description" content="Perfect Fit Alterations - Professional tailoring services in New York. Expert clothing alterations, suit tailoring, dress alterations, and repairs.">
+    <meta name="keywords" content="tailoring, alterations, clothing repair, suit tailoring, dress alterations, hemming, New York tailor">
+    <meta name="author" content="Perfect Fit Alterations">
+    <meta name="robots" content="index, follow">
+    <title>Perfect Fit Alterations | Professional Tailoring Services in New York</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="canonical" href="https://www.perfectfitalterations.com/">
+    <!-- Add structured data for local business -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Perfect Fit Alterations",
+        "image": "https://images.pexels.com/photos/4622419/pexels-photo-4622419.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "123 Stitch Street",
+            "addressLocality": "New York",
+            "addressRegion": "NY",
+            "postalCode": "10001",
+            "addressCountry": "US"
+        },
+        "telephone": "(555) 123-4567",
+        "email": "info@perfectfit.com",
+        "url": "https://www.perfectfitalterations.com",
+        "openingHoursSpecification": [
+            {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+                "opens": "09:00",
+                "closes": "18:00"
+            },
+            {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": "Saturday",
+                "opens": "10:00",
+                "closes": "16:00"
+            }
+        ],
+        "priceRange": "$$",
+        "servesCuisine": "Tailoring Services"
+    }
+    </script>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.perfectfitalterations.com/">
+    <meta property="og:title" content="Perfect Fit Alterations | Professional Tailoring Services in New York">
+    <meta property="og:description" content="Professional tailoring services in New York. Expert clothing alterations, suit tailoring, dress alterations, and repairs.">
+    <meta property="og:image" content="https://www.perfectfitalterations.com/images/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.perfectfitalterations.com/">
+    <meta property="twitter:title" content="Perfect Fit Alterations | Professional Tailoring Services in New York">
+    <meta property="twitter:description" content="Professional tailoring services in New York. Expert clothing alterations, suit tailoring, dress alterations, and repairs.">
+    <meta property="twitter:image" content="https://www.perfectfitalterations.com/images/og-image.jpg">
 </head>
 <body>
     <header>
@@ -17,11 +71,11 @@
                 <i class="fas fa-scissors logo-icon"></i>
                 Perfect Fit
             </a>
-            <div class="hamburger" id="hamburger">
+            <div class="hamburger" id="hamburger" aria-controls="nav-links" aria-expanded="false" aria-label="Toggle navigation menu">
                 <i class="fas fa-bars"></i>
             </div>
-            <ul class="nav-links" id="nav-links">
-                <li><a href="./index.html" class="active">Home</a></li>
+            <ul class="nav-links" id="nav-links" role="navigation">
+                <li><a href="./index.html" class="active" aria-current="page">Home</a></li>
                 <li><a href="./services.html">Services</a></li>
                 <li><a href="./about.html">About</a></li>
                 <li><a href="./contact.html">Contact</a></li>
@@ -43,7 +97,7 @@
             <div class="intro-container">
                 <div class="intro-content">
                     <div class="tailor-profile">
-                        <img src="https://images.pexels.com/photos/4622419/pexels-photo-4622419.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Professional Tailoring" class="tailor-image">
+                        <img src="https://images.pexels.com/photos/4622419/pexels-photo-4622419.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Professional tailor working on a garment at Perfect Fit Alterations" class="tailor-image">
                         <div class="tailor-info">
                             <h2>Perfect Fit Alterations</h2>
                             <h3>Your Trusted Tailoring Partner Since 2003</h3>
